--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,241 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-h1 {
-    color: red;
+body {
+    font-family:Cooper Hewitt, Helvetica, sans-serif;
 }
+
+.promo {
+    text-align:center;
+    padding:100px;
+    background-image:url(../../assets/img/_MG_0236.jpg);
+    background-size:cover;
+    height:800px;
+}
+
+.promo .jumbotron {
+    border-radius:37px;
+    padding:61px;
+    margin:104px auto;
+    background-color:rgba(255,255,255,0.6);
+    max-width:800px;
+}
+
+@media (min-width: 300px) {
+    .promo .jumbotron {
+        padding:19px;
+    }
+}
+
+.container.site-section-one {
+    text-align:center;
+    font-size:21px;
+    padding:47px;
+    margin:65px auto;
+}
+
+.col-md-12 {
+    text-align:center;
+    padding:4%;
+}
+
+.col-md-4 {
+    text-align:center;
+    font-size:22px;
+}
+
+.dark-div {
+    background-color:rgba(210,186,144,0.49);
+    height:600px;
+}
+
+.footer-clean {
+    background-color:#335545;
+    color:white;
+}
+
+.container.site-section-two {
+    padding:58px 0px 100px 0px;
+    font-size:21px;
+    text-align:center;
+
+}
+
+.fa.fa-pagelines {
+    color:rgb(89,111,90);
+    font-size: 40px;
+}
+
+.site-section-two h2 {
+    padding:37px 37px 37px 0px;
+}
+
+.footer-clean {
+  padding:50px 0;
+  color:#4b4c4d;
+}
+
+.footer-clean h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-clean ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+.footer-clean ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-clean ul a:hover {
+  opacity:1;
+}
+
+.footer-clean .item.social {
+  text-align:right;
+}
+
+@media (max-width:767px) {
+  .footer-clean .item {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-clean .item.social {
+    text-align:center;
+  }
+}
+
+.footer-clean .item.social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin-left:10px;
+  margin-top:22px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-clean .item.social > a:hover {
+  opacity:0.9;
+}
+
+@media (max-width:991px) {
+  .footer-clean .item.social > a {
+    margin-top:40px;
+  }
+}
+
+@media (max-width:767px) {
+  .footer-clean .item.social > a {
+    margin-top:10px;
+  }
+}
+
+.footer-clean .copyright {
+  margin-top:14px;
+  margin-bottom:0;
+  font-size:13px;
+  opacity:0.6;
+}
+
+.footer-clean {
+    padding:50px 0;
+    color:#fff;
+  }
+
+  .footer-clean h3 {
+    margin-top:0;
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+
+  .footer-clean ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+
+  .footer-clean ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+
+  .footer-clean ul a:hover {
+    opacity:1;
+  }
+
+  .footer-clean .item.social {
+    text-align:right;
+  }
+
+  @media (max-width:767px) {
+    .footer-clean .item {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .footer-clean .item.social {
+      text-align:center;
+    }
+  }
+
+  .footer-clean .item.social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ccc;
+    margin-left:10px;
+    margin-top:22px;
+    color:inherit;
+    opacity:0.75;
+  }
+
+  .footer-clean .item.social > a:hover {
+    opacity:0.9;
+  }
+
+  @media (max-width:991px) {
+    .footer-clean .item.social > a {
+      margin-top:40px;
+    }
+  }
+
+  @media (max-width:767px) {
+    .footer-clean .item.social > a {
+      margin-top:10px;
+    }
+  }
+
+  .footer-clean .copyright {
+    margin-top:14px;
+    margin-bottom:0;
+    font-size:13px;
+    opacity:0.6;
+  }
